fix:missing color valiable for netlify function

--- a/styles/index.css
+++ b/styles/index.css
@@ -22,6 +22,7 @@
   --color-mongoDB: #52aa4a;
   --color-nodeJs: #67a063;
   --color-semantic-ui: #31bfb3;
+  --color-netlify-functions: #45a6bd;
 }
 
 html {
